--- a/data-science.html
+++ b/data-science.html
@@ -71,8 +71,12 @@
   
       
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oadYafwf&__jvst=Employee+Referral&__jvsd=sNYIIhwX&__jvsc=Twitter&bid=nNjarMwY'>NICE Actimize Careers - Data Scientist - Actimize division</a></h5> 
+<p><span class="badge badge-light">Atlanta, Georgia  United States</span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/eventbrite/d2dc8796-b245-4bd7-9cb6-2e3df7789519'>Eventbrite - Senior Data Scientist</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/ceresimaging/41a34a9b-e98b-4556-8139-ed3cd92ce930'>Ceres Imaging - Geospatial Data Scientist</a></h5> 
@@ -157,7 +161,7 @@
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/theiconic/jobs/1796028'>Job Application for Data Science Team Lead at THE ICONIC</a></h5> 
+<h5><a href='https://boards.greenhouse.io/theiconic/jobs/1796028'>Job Application for Data Science Team Lead at THE ICONIC</a></h5> 
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -217,7 +221,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/f2ac31ef-e2a6-44fa-b683-4d850a7d8ebb'>Gojek - Sr. Data Scientist - GoFood</a></h5> 
+<h5><a href='https://jobs.lever.co/gojek/f2ac31ef-e2a6-44fa-b683-4d850a7d8ebb'>Gojek - Sr. Data Scientist - GoFood</a></h5> 
 <p><span class="badge badge-light">Jakarta</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -297,7 +301,7 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light">Canada  North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://rss.cm/job/1808/210/'>Data Scientist - Actuarials - Roles at Sumner &amp; Scott</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rss.cm/job/1808/210/'>Data Scientist - Actuarials - Roles at Sumner &amp; Scott</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -317,11 +321,11 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ok3Oafw5&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nY8qpMwc'>Freedom Financial Network Careers - Contractor-Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ok3Oafw5&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nY8qpMwc'>Freedom Financial Network Careers - Contractor-Data Scientist</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/averityteam/job/cf479e8edqae4ego6opw1tqp3h'>Data Scientist - Automotives | Averity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/cf479e8edqae4ego6opw1tqp3h'>Data Scientist - Automotives | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY  NYC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -329,7 +333,7 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://www.prostaff.ch/de/jobs/19144'>SQL System Engineer | PROSTAFF ? Swiss IT and Data Science Recruitment &amp; HR-Services</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.prostaff.ch/de/jobs/19144'>SQL System Engineer | PROSTAFF ? Swiss IT and Data Science Recruitment &amp; HR-Services</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -355,7 +359,7 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698543439-data-scientist-deep-learning'>Bosch Group Data Scientist ? Deep Learning | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698543439-data-scientist-deep-learning'>Bosch Group Data Scientist ? Deep Learning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -379,7 +383,7 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/similarweb/jobs/1939308'>Job Application for Data Scientist at SimilarWeb</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/similarweb/jobs/1939308'>Job Application for Data Scientist at SimilarWeb</a></h5> 
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -440,7 +444,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">San Mateo</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.prosperity.ie/jobs/show/930678144-head-of-data-science'>Head of Data Science Job</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.prosperity.ie/jobs/show/930678144-head-of-data-science'>Head of Data Science Job</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -478,10 +482,6 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Version1/743999698159085-senior-data-scientist-predictive-maintenance'>Version 1 Senior Data Scientist Predictive Maintenance | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/aeratechnology/b41ce403-2a98-46b5-a81d-c5ea8015280c'>Aera Technology - Senior Data Scientist - Customer Facing</a></h5> 
-<p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
